v10 massive fix & refactor (#151)
* Start refactoring.

* More v10 warning fixing.

* Fix v10 warnings in actor sheets.

* DRY up item sheets.

* More v10 fixes.

* Break up char sheet by tab, DRY violence tab.

* Fix fix fix.

* Use times to DRY up miseries li's.

* More v10 fixes.

* Fix tab styling and omenDie path.

* Use v10 manifest format.

* Remove empty line.

* More v10 fixes, for various item.system vals.

* Fix containers for v10.

* DRY up armor tiers. Fix equipped shield on equipment list.

* Fix editor-content padding-top.

* Tweak tinymce: don't include bold since Special Elite only displays regular, and keep font size the same between display and editing.

* Tweak tinymce editor background color when editing.

* Convert most html to hbs.

* Move remaining html templates to hbs.

* Reference unclean/sacred roll tables from starting equipment roll tables.

* Create new followers as actors.

* Get rid of more unneeded text roll table entries; delete unused shorter starting weapon roll table.

* Use actors for follower/wagon/donkey results. Add alternate starting equipment 1 roll table for items only.

* Latest.

* Update CHANGELOG.

* Update CHANGELOG.

--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -118,6 +118,7 @@
 .morkborg .editor,
 .morkborg .editor-content {
   height: 100%;
+  padding-top: 10px;
 }
 .morkborg .button {
   background: var(--foreground-color);
@@ -212,8 +213,7 @@
   font-family: var(--h2-font);
   font-size: 22px;
   height: 30px;
-  line-height: 32px;
-  margin: 0 5px;
+  padding: 0;
   width: 120px;
 }
 .morkborg.sheet .sheet-tabs .item:hover {
@@ -221,9 +221,9 @@
   text-shadow: 0 0 10px var(--highlight-background-color);
 }
 .morkborg.sheet .sheet-tabs .item.active {
-  text-shadow: none;
   background-color: var(--highlight-background-color);
   color: var(--highlight-foreground-color);
+  text-shadow: none;
 }
 .morkborg .sheet-body {
   overflow: hidden;
@@ -1384,6 +1384,10 @@ a.entity-link, a.inline-roll {
 
 #world-config .window-content .editor {
   background: #d8d8cc;
+}
+
+h3 {
+  border-bottom: none;
 }
 
 /* ====================== */
