--- a/scss/skins/mb/content.min.scss
+++ b/scss/skins/mb/content.min.scss
@@ -164,9 +164,10 @@ pre[class*="language-"] {
   cursor: help;
 }
 .mce-content-body {
+  background-color: #222;
   color: white;
-  background-color: black;
   font-family: "Special Elite";
+  font-size: 14px;
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
