Start fixing v10 journal styling.

--- a/scss/morkborg/_foundry-overrides.scss
+++ b/scss/morkborg/_foundry-overrides.scss
@@ -539,6 +539,10 @@ select:focus {
 
 /* ================== 11. JOURNAL ENTRIES =================== */
 
+.journal-sheet-container {
+  background-color: black;
+}
+
 .journal-sheet form {
   button[type="submit"] {
     background: var(--background-color);
