--- a/scss/morkborg/_root.scss
+++ b/scss/morkborg/_root.scss
@@ -17,6 +17,7 @@
   --h2-font: "FetteTrumpDeutsch";
   --h3-font: "Old Cupboard";
   --item-font: "Special Elite";
+  --window-border-color: #222222;
 }
 
 /* ====================== */
