--- a/scss/morkborg/_sheet.scss
+++ b/scss/morkborg/_sheet.scss
@@ -8,9 +8,9 @@
       background: var(--window-background);
       font-size: 13px;
       color: var(--foreground-color);
-      border-bottom: 1px solid #222222;
-      border-left: 1px solid #222222;
-      border-right: 1px solid #222222;
+      border-bottom: 1px solid var(--window-border-color);
+      border-left: 1px solid var(--window-border-color);
+      border-right: 1px solid var(--window-border-color);
 
       form {
         height: 100%;
