Fix follower max hp field not saving.

--- a/templates/actor/follower-sheet.hbs
+++ b/templates/actor/follower-sheet.hbs
@@ -32,7 +32,7 @@
         /
         <input
           class="stat-input"
-          name="data.hp.max"
+          name="system.hp.max"
           type="number"
           value="{{data.system.hp.max}}"
           data-dtype="Number"
