Fix powers field not saving.

--- a/templates/actor/character/powers-tab.hbs
+++ b/templates/actor/character/powers-tab.hbs
@@ -14,7 +14,7 @@
         <label class="stat-label uses-remaining-label">{{localize "MB.PowerUsesRemaining"}}:</label>
         <input
           class="stat-input"
-          name="sysem.powerUses.value"
+          name="system.powerUses.value"
           type="number"
           value="{{data.system.powerUses.value}}"
           data-dtype="Number"
