--- a/templates/actor/common/violence-tab.hbs
+++ b/templates/actor/common/violence-tab.hbs
@@ -53,7 +53,7 @@
             {{/if}}
           </div>
           <div class="item-fields">
-            <span class="item-field damage-die">{{item.system.damageDie}}</span>
+            <span class="item-field damage-die rollable">{{item.system.damageDie}}</span>
             <span class="item-field weapon-type">{{item.system.weaponType}}</span>
           </div>
           <div class="item-buttons">
