Add damage button to unautomated attack roll card.

--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -1493,6 +1493,24 @@ h3 {
   padding-left: 4px;
   padding-right: 4px;
 }
+.roll-card .roll-button-row {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 100%;
+}
+.roll-card .roll-button-row .roll-card-button {
+  background-color: var(--foreground-color);
+  color: var(--background-color);
+  border: none;
+  border-bottom: 2px solid #777;
+  border-radius: 0;
+  font-size: 20px;
+  font-family: var(--h2-font);
+  text-transform: capitalize;
+}
 
 .dr-modifier {
   margin-bottom: 5px;
