--- a/templates/chat/unautomated-attack-roll-card.hbs
+++ b/templates/chat/unautomated-attack-roll-card.hbs
@@ -2,12 +2,10 @@
   <div class="card-title">
     {{localize weaponTypeKey}} {{localize 'MB.Attack'}}
   </div>
-  {{#each items as |item id|}}
   <div class="item-row">
     <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
     <span class="item-name">{{item.name}}</span>
   </div>
-  {{/each}}
   <div class="attack-roll">
     <div class="roll-title">
       <span>{{attackFormula}}</span>      
@@ -15,5 +13,8 @@
     <div class="roll-result">
       <span>{{xtotal attackRoll}}</span>
     </div>
+  </div>
+  <div class="roll-button-row">
+    <button type="button" class="roll-card-button damage-button" data-actor-id="{{actor.id}}" data-item-id="{{item.id}}">{{localize 'MB.RollDamage'}}</button>
   </div>
 </form>
