--- a/templates/chat/unautomated-defend-roll-card.hbs
+++ b/templates/chat/unautomated-defend-roll-card.hbs
@@ -6,6 +6,11 @@
     <span class="item-name">{{item.name}}</span>
   </div>
   {{/each}}
+  <div class="dr-modifiers">
+    {{#each drModifiers}}
+    <div class="dr-modifier">{{this}}</div>
+    {{/each}}
+  </div>
   <div class="defend-roll">
     <div class="roll-title">
       <span>{{defendFormula}}</span>
