DRY up creature/follower header, morale/reaction handlers, and description tab.

--- a/scss/morkborg.scss
+++ b/scss/morkborg.scss
@@ -4,10 +4,9 @@
 @import "morkborg/_sheet";
 @import "morkborg/_actor-sheet";
 @import "morkborg/_character-sheet";
+@import "morkborg/_npc-header";
 @import "morkborg/_item-list";
-@import "morkborg/_creature-sheet";
 @import "morkborg/_item-sheet";
-@import "morkborg/_follower-sheet";
 @import "morkborg/_container-sheet";
 @import "morkborg/_foundry-overrides";
 @import "morkborg/_rollcards";
