--- a/css/morkborg.css
+++ b/css/morkborg.css
@@ -719,6 +719,43 @@
   color: var(--highlight-background-color);
 }
 
+.morkborg.sheet.actor .sheet-header.npc {
+  margin-top: 0;
+  flex: 0 0 90px;
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+}
+.morkborg.sheet.actor .sheet-header.npc .header-col1 {
+  flex: 0 0 200px;
+}
+.morkborg.sheet.actor .sheet-header.npc .header-col2 {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  margin: 5px;
+}
+.morkborg.sheet.actor .sheet-header.npc .profile-img {
+  height: 200px;
+  width: 200px;
+}
+.morkborg.sheet.actor .sheet-header.npc .name-row {
+  flex: 0 0 45px;
+  margin-bottom: 10px;
+  padding-left: 12px;
+  width: 100%;
+}
+.morkborg.sheet.actor .sheet-header.npc .name-row input[type=text].actor-name {
+  height: 45px;
+}
+.morkborg.sheet.actor .sheet-header.npc .hitpoints-row {
+  flex: 0 0 35px;
+  margin-bottom: 10px;
+  margin-left: 14px;
+}
+
 .morkborg .items-list .items-header {
   height: 28px;
   margin: 2px 0;
@@ -812,43 +849,6 @@
   text-align: center;
 }
 
-.morkborg.sheet.actor.creature .sheet-header {
-  display: flex;
-  flex: 0 0 90px;
-  flex-direction: row;
-  margin-top: 0;
-  padding: 5px;
-}
-.morkborg.sheet.actor.creature .sheet-header .header-col1 {
-  flex: 0 0 200px;
-}
-.morkborg.sheet.actor.creature .sheet-header .header-col2 {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  height: 100%;
-  justify-content: center;
-  margin: 5px;
-}
-.morkborg.sheet.actor.creature .sheet-header .profile-img {
-  height: 200px;
-  width: 200px;
-}
-.morkborg.sheet.actor.creature .sheet-header .name-row {
-  flex: 0 0 45px;
-  margin-bottom: 10px;
-  padding-left: 12px;
-  width: 100%;
-}
-.morkborg.sheet.actor.creature .sheet-header input[type=text].creature-name {
-  height: 45px;
-}
-.morkborg.sheet.actor.creature .sheet-header .hitpoints-row {
-  flex: 0 0 35px;
-  margin-bottom: 10px;
-  margin-left: 14px;
-}
-
 .morkborg.sheet.item .sheet-header {
   margin-top: 0;
   flex: 0 0 90px;
@@ -876,43 +876,6 @@
 .morkborg.sheet.item .sheet-body {
   margin-top: 8px;
   padding: 5px;
-}
-
-.morkborg.sheet.actor.follower .sheet-header {
-  margin-top: 0;
-  flex: 0 0 90px;
-  display: flex;
-  flex-direction: row;
-  padding: 5px;
-}
-.morkborg.sheet.actor.follower .sheet-header .header-col1 {
-  flex: 0 0 200px;
-}
-.morkborg.sheet.actor.follower .sheet-header .header-col2 {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  height: 100%;
-  justify-content: center;
-  margin: 5px;
-}
-.morkborg.sheet.actor.follower .sheet-header .profile-img {
-  height: 200px;
-  width: 200px;
-}
-.morkborg.sheet.actor.follower .sheet-header .name-row {
-  flex: 0 0 45px;
-  margin-bottom: 10px;
-  padding-left: 12px;
-  width: 100%;
-}
-.morkborg.sheet.actor.follower .sheet-header input[type=text].follower-name {
-  height: 45px;
-}
-.morkborg.sheet.actor.follower .sheet-header .hitpoints-row {
-  flex: 0 0 35px;
-  margin-bottom: 10px;
-  margin-left: 14px;
 }
 
 .morkborg.sheet.actor.container .sheet-header {
