Start DRYing up chat card templates.

--- a/templates/item/weapon-sheet.hbs
+++ b/templates/item/weapon-sheet.hbs
@@ -68,7 +68,7 @@
         />
       </div>
 
-      {{!-- Fumble on on --}}
+      {{!-- Fumble on --}}
       <div class="form-group">
         <label>{{ localize "MB.ItemFumbleOn" }}:</label>
         <input
