--- a/templates/chat/get-better-roll-card.hbs
+++ b/templates/chat/get-better-roll-card.hbs
@@ -1,26 +1,26 @@
 <form class="roll-card">
   <div class="card-title">Get Better</div>
-  <div class="test-roll">
-    <div class="outcome-text">
-      <span class="take-damage">{{hpOutcome}}</span>
+  <div class="roll-result">
+    <div class="outcome-row">
+      <span>{{hpOutcome}}</span>
     </div>
-    <div class="outcome-text">
-      <span class="take-damage">{{strOutcome}}</span>
+    <div class="outcome-row">
+      <span>{{strOutcome}}</span>
     </div>
-    <div class="outcome-text">
-      <span class="take-damage">{{agiOutcome}}</span>
+    <div class="outcome-row">
+      <span>{{agiOutcome}}</span>
     </div>
-    <div class="outcome-text">
-      <span class="take-damage">{{preOutcome}}</span>
+    <div class="outcome-row">
+      <span>{{preOutcome}}</span>
     </div>
-    <div class="outcome-text">
-      <span class="take-damage">{{touOutcome}}</span>
+    <div class="outcome-row">
+      <span>{{touOutcome}}</span>
     </div>
     <div class="roll-title">
       <span>Left in the debris you find:</span>
     </div>
-    <div class="outcome-text">
-      <span class="take-damage">{{debrisOutcome}}</span>
+    <div class="outcome-row">
+      <span>{{debrisOutcome}}</span>
     </div>
   </div>
 </form>
