--- a/templates/chat/outcome-roll-card.hbs
+++ b/templates/chat/outcome-roll-card.hbs
@@ -1,15 +1,15 @@
 <form class="roll-card">
   <div class="card-title">{{cardTitle}}</div>
-  <div class="test-roll">
+  <div class="roll-result">
     <div class="roll-title">
       <span>{{rollFormula}}</span>
     </div>
-    <div class="roll-result">
+    <div class="roll-row">
       <span>{{xtotal roll}}</span>
     </div>
     {{#if outcomeText}}
-    <div class="outcome-text">
-      <span class="take-damage">{{outcomeText}}</span>
+    <div class="outcome-row">
+      <span class="outcome-text">{{outcomeText}}</span>
     </div>
     {{/if}}
   </div>
