--- a/templates/chat/unautomated-attack-roll-card.hbs
+++ b/templates/chat/unautomated-attack-roll-card.hbs
@@ -10,7 +10,7 @@
     <div class="roll-title">
       <span>{{attackFormula}}</span>      
     </div>
-    <div class="roll-result">
+    <div class="roll-row">
       <span>{{xtotal attackRoll}}</span>
     </div>
   </div>
