--- a/templates/chat/unautomated-defend-roll-card.hbs
+++ b/templates/chat/unautomated-defend-roll-card.hbs
@@ -15,7 +15,7 @@
     <div class="roll-title">
       <span>{{defendFormula}}</span>
     </div>
-    <div class="roll-result">
+    <div class="roll-row">
       <span>{{xtotal defendRoll}}</span>
     </div>
   </div>
