More roll card DRYing and cleanup.

--- a/templates/chat/unautomated-attack-roll-card.hbs
+++ b/templates/chat/unautomated-attack-roll-card.hbs
@@ -1,7 +1,5 @@
 <form class="roll-card attack-roll-card">
-  <div class="card-title">
-    {{localize weaponTypeKey}} {{localize 'MB.Attack'}}
-  </div>
+  <div class="card-title">{{cardTitle}}</div>
   <div class="item-row">
     <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
     <span class="item-name">{{item.name}}</span>
